Opened 14 years ago

Closed 14 years ago

#7408 closed bug (fixed)

BTextView don't accept canna input method sometimes

Reported by: X512 Owned by: korli
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

After canna method have selected all is OK, but if focus change StyledEdit don't accept input. Input can be «fixed» by click on free space in Deskbar and after click on StyledEdit.

Attachments (3)

canna.png (9.0 KB ) - added by X512 14 years ago.
Screenshot. StyledEdit is inactive because printscreen don't work with canna input method.
patch.diff (1.2 KB ) - added by X512 14 years ago.
patch2.diff (562 bytes ) - added by X512 14 years ago.

Download all attachments as: .zip

Change History (12)

by X512, 14 years ago

Attachment: canna.png added

Screenshot. StyledEdit is inactive because printscreen don't work with canna input method.

by X512, 14 years ago

Attachment: patch.diff added

comment:1 by X512, 14 years ago

patch: 01

comment:2 by X512, 14 years ago

Component: Servers/input_serverKits/Interface Kit
Owner: changed from korli to axeld

Patch disable noitifing input_server when window loose focus. This solve undefined behavior when active and inactive windows send message to input_server; if input_server receive message from active window last then all work correctly, when not input_server get wrong information about B_INPUT_METHOD_AWARE view.

Last edited 14 years ago by X512 (previous) (diff)

comment:3 by korli, 14 years ago

Owner: changed from axeld to korli
Status: newassigned

comment:4 by korli, 14 years ago

I applied a similar patch in hrev42557. I found better to break early.

Please check whether it fits. Thanks!

comment:5 by X512, 14 years ago

Input work better, but bug still present. Context menu break input, because kAcceptKeyboardFocusFlag hack confuse input_server or app_server.

by X512, 14 years ago

Attachment: patch2.diff added

comment:6 by X512, 14 years ago

Patch2 fix bug with menu. Patch block noitifing input_server about focus view changes when window is inactive.

comment:7 by korli, 14 years ago

Applied in hrev42574.

comment:8 by X512, 14 years ago

Bug seems to be fixed. Thanks for applying patches!

comment:9 by korli, 14 years ago

Resolution: fixed
Status: assignedclosed
Note: See TracTickets for help on using tickets.