Patch from X512 (#7408): only send input method aware messages for active windows

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42557 a95241bf-73f2-0310-859d-f6bbb57e9c96